[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Objects/BadGuys/Iceblock.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Creatures/IceblockSmart/smartblock-0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Creatures/IceblockSmart/smartblock-1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Creatures/IceblockSmart/smartblock-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Creatures/IceblockSmart/stomped-0.png" type="Texture" id=5]
[ext_resource path="res://Audio/SoundEffects/Enemy/fall.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/SoundEffects/Enemy/stomp.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/SoundEffects/Enemy/kick.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/SoundEffects/Enemy/iceblock_bump.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SoundEffects/Enemy/splash.ogg" type="AudioStream" id=10]
[ext_resource path="res://Audio/SoundEffects/Enemy/icecrash.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sprites/Creatures/Iceblock/shard.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Creatures/Snowball/droplet.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "squished",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[sub_resource type="Animation" id=4]
resource_name = "active"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0 ),
"update": 1,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "explode"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplodeDroplets:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("IceShards:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "shake"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0, -10.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "squished" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.6, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("IceShards:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.45, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 1.5 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.252, 0.752 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.45 ),
"transitions": PoolRealArray( 2, 1, 2, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, -20 ), Vector2( 0, -19 ), Vector2( 0, -12 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:current_animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "active" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/AnimatedSprite:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.646552, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.941176, 0.339844, 0.922334, 1, 0 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.467949, 1 )
colors = PoolColorArray( 1, 1, 1, 0.847059, 0.625, 0.936279, 1, 0.556863, 0, 0.478516, 1, 0 )

[node name="Iceblock" type="KinematicBody2D" groups=[
"badguys",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
smart = true

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]
frames = SubResource( 12 )
frame = 1
playing = true
offset = Vector2( 0, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -64, -512, 128, 1024 )
physics_process_parent = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "active"
anims/active = SubResource( 4 )
anims/explode = SubResource( 5 )
anims/shake = SubResource( 6 )
anims/squished = SubResource( 7 )
anims/stop = SubResource( 8 )
anims/wakeup = SubResource( 9 )

[node name="SFX" type="Node" parent="."]
editor/display_folded = true

[node name="Fall" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="Squish" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )

[node name="Kick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="Bump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )

[node name="Melt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )

[node name="Shatter" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )

[node name="IceShards" type="CPUParticles2D" parent="."]
rotation = -1.5708
emitting = false
amount = 4
lifetime = 0.6
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 12 )
spread = 60.0
flatness = 1.0
gravity = Vector2( 0, 500 )
initial_velocity = 250.0
angular_velocity = 1000.0
angular_velocity_random = 0.75
damping = 50.0
angle = 720.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.5
color_ramp = SubResource( 10 )

[node name="ExplodeDroplets" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 13 )
spread = 180.0
flatness = 1.0
gravity = Vector2( 0, 500 )
initial_velocity = 300.0
initial_velocity_random = 0.75
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 25.0
damping_random = 0.75
angle = 360.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.3
color_ramp = SubResource( 11 )

[node name="WakeupTimer" type="Timer" parent="."]

[node name="ShakeTimer" type="Timer" parent="."]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="WakeupTimer" to="." method="_on_WakeupTimer_timeout"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
